Inseriti effetti hover su album

--- a/index.html
+++ b/index.html
@@ -63,42 +63,62 @@
                 <p>Recently played</p>
                 <div class="row" id="recently-played">
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
+                            <div class="img-container">
+                                <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                             <div class="album-information">
                                 <p class="name-album text-center">Heavy metal</p>
                                 <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/stranger.jpeg" alt="Stranger Things">
+                            <div class="img-container">
+                                <div class="img-container">
+                                    <img src="./img/stranger.jpeg" alt="Stranger Things">
+                                </div>
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                         <div class="album-information">
                             <p class="name-album text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</p>
                             <p class="author text-center">Kyle Dixon & Micheal Stein</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                            <div class="img-container">
+                                <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                         <div class="album-information">
                             <p class="name-album text-center">A quiet place</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/split.jpeg" alt="Stranger Things">
+                            <div class="img-container">
+                                <img src="./img/split.jpeg" alt="Split">
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                         <div class="album-information">
                             <p class="name-album text-center">Split</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/cure.jpeg" alt="Cure">
+                            <div class="img-container">
+                                <img src="./img/cure.jpeg" alt="Cure">
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                         <div class="album-information">
                             <p class="name-album text-center">A cure for wellness</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                            <img src="./img/sinister.jpeg" alt="Sinister">
+                            <div class="img-container">
+                                <img src="./img/sinister.jpeg" alt="Sinister">
+                                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                            </div>
                         <div class="album-information">
                             <p class="name-album text-center">Sinister</p>
                             <p class="author text-center">Subtitle</p>
@@ -125,6 +145,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- ARTISTI PIU' POPOLARI -->
                 <div class="most-popular">
                     <p>Artisti più popolari</p>
                     <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
@@ -145,8 +166,10 @@
                 </div>
             </main>
         </div>
+        <!-- FOOTER -->
         <footer>
             <div class="row">
+                <!-- SEZIONE FOOTER DI SINISTRA -->
                 <div class="col-3 col-lg-2 flexbox">                    
                     <img class="cover-song" src="./img/sinister.jpeg" alt="Sinister">
                     <div class="information-song">
@@ -159,6 +182,7 @@
                         <i class="far fa-folder"></i>
                     </div>                    
                 </div>
+                <!-- SEZIONE FOOTER CENTRALE -->
                 <div class="col-lg-offset-1 col-xl-offset-2"></div>
                 <div class="col-6 col-xl-4">
                     <div class="commands flexbox">
@@ -177,6 +201,7 @@
                         <div class="missing">4:35</div>
                     </div>
                 </div>
+                <!-- SEZIONE FOOTER DI DESTRA -->
                 <div class="col-lg-offset-1 col-xl-offset-2"></div>
                 <div class="col-3 col-lg-2 flexbox">
                     <div class="icons-song">
