Inserito marker sulle due progressbar

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                         <div class="listening">0:25</div>
                         <div class="bar-song">
                             <div class="listened">
+                                <div class="marker"></div>
                             </div>                            
                         </div>  
                         <div class="missing">4:35</div>
@@ -213,11 +214,10 @@
                     </div>
                     <i class="fas fa-volume-up"></i>
                     <div class="bar">
-                        <div class="volume">
+                        <div class="volume"><div class="marker"></div></div>
                     </div>                
                 </div>
             </div>           
-        </footer>
-    
+        </footer>    
 </body>
 </html>
